--- a/css/style.css
+++ b/css/style.css
@@ -265,8 +265,6 @@ h6 {
   line-height: 1.1
 }
 .header__actions {
-  -webkit-margin-start: auto;
-  margin-inline-start: auto;
   display: flex;
   align-items: center;
   -webkit-column-gap: .625rem;
@@ -274,6 +272,8 @@ h6 {
   column-gap: .625rem
 }
 .header__button {
+  -webkit-margin-start: auto;
+  margin-inline-start: auto;
   position: relative;
   z-index: 5
 }
@@ -1449,11 +1449,11 @@ h6 {
     position: fixed;
     width: 100%;
     height: 100%;
-    left: 100%;
+    left: -100%;
     top: 0;
     z-index: 1;
     overflow: auto;
-    padding: 6.25rem .9375rem .9375rem 1.875rem;
+    padding: 9.375rem .9375rem 1.875rem .9375rem;
     transition: left .3s;
     background-color: #facc15
   }
@@ -1462,7 +1462,7 @@ h6 {
     position: fixed;
     width: 100%;
     height: 5.4375rem;
-    left: 100%;
+    left: -100%;
     top: 0;
     transition: left .3s;
     z-index: 2;
@@ -1528,8 +1528,7 @@ h6 {
     -moz-column-gap: 1.25rem;
     column-gap: 1.25rem;
     flex-direction: column;
-    row-gap: 2rem;
-    align-items: flex-end
+    row-gap: 2rem
   }
   .menu__link {
     text-align: right;
