--- a/css/style.css
+++ b/css/style.css
@@ -1132,6 +1132,9 @@ h6 {
   .content-block__value {
     font-size: 6.25rem
   }
+  .content-block__price-item {
+    font-size: 1.375rem
+  }
   .header__logo span {
     font-size: 2rem
   }
@@ -1285,6 +1288,9 @@ h6 {
   }
   .content-block__value {
     font-size: 3.125rem
+  }
+  .content-block__price-item {
+    font-size: 1.125rem
   }
   .header__logo span {
     font-size: 1.25rem
@@ -1586,6 +1592,9 @@ h6 {
   }
   .content-block__value {
     font-size: clamp(3.125rem ,2.1148989899rem + 5.0505050505vw ,6.25rem)
+  }
+  .content-block__price-item {
+    font-size: clamp(1.125rem ,1.0441919192rem + .404040404vw ,1.375rem)
   }
   .header__logo span {
     font-size: clamp(1.25rem ,1.0075757576rem + 1.2121212121vw ,2rem)
